kubernetes/basesvc/core/authorization.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorizationapi-deployment
spec:
  selector:
    matchLabels:
      app: authorizationapi
  replicas: 1
  template:
    metadata:
      labels:
        app: authorizationapi
    spec:
      containers:
        - name: authorizationapi
          image: dockerhub.dttt.vn/core/authorization.api:5.1
          imagePullPolicy: Always          
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: v1
kind: Service
metadata:
  name: authorization-service
  labels:
    app: authorizationapi
spec:
  ports:
    - port: 80
  selector:
    app: authorizationapi
