kubernetes/basesvc/core/commonmasterdata.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commonmasterdataapi-deployment
spec:
  selector:
    matchLabels:
      app: commonmasterdataapi
  replicas: 1
  template:
    metadata:
      labels:
        app: commonmasterdataapi
    spec:
      containers:
        - name: commonmasterdataapi
          image: dockerhub.dttt.vn/core/commonmasterdata.api:5.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: v1
kind: Service
metadata:
  name: commonmasterdata-service
  labels:
    app: commonmasterdataapi
spec:
  ports:
    - port: 80
  selector:
    app: commonmasterdataapi
