kubernetes/basesvc/core/file.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileapi-deployment
spec:
  selector:
    matchLabels:
      app: fileapi
  replicas: 1
  template:
    metadata:
      labels:
        app: fileapi
    spec:
      containers:
        - name: fileapi
          image: dockerhub.dttt.vn/core/file.api:5.1
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /app/wwwroot/uploads
            name: fileapi-data
          ports:
            - containerPort: 80
      volumes:
      - name: fileapi-data
        persistentVolumeClaim:
          claimName: fileapi
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: v1
kind: Service
metadata:
  name: file-service
  labels:
    app: fileapi
spec:
  ports:
    - port: 80
  selector:
    app: fileapi
