kubernetes/basesvc/core/identityserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityserver-deployment
spec:
  selector:
    matchLabels:
      app: identityserver
  replicas: 1
  template:
    metadata:
      labels:
        app: identityserver
    spec:
      containers:
        - name: identityserver
          image: dockerhub.dttt.vn/core/identityserver:5.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
      - name: dockerhubdtttvn
---
apiVersion: v1
kind: Service
metadata:
  name: identityserver-service
  labels:
    app: identityserver
spec:
  ports:
    - port: 80
  selector:
    app: identityserver
