kubernetes/basesvc/core/notification.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationapi-deployment
spec:
  selector:
    matchLabels:
      app: notificationapi
  replicas: 1
  template:
    metadata:
      labels:
        app: notificationapi
    spec:
      containers:
        - name: notificationapi
          image: dockerhub.dttt.vn/core/notification.api:5.1
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    app: notificationapi
spec:
  ports:
    - port: 80
  selector:
    app: notificationapi
