kubernetes/basesvc/core/ruletracking.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruletrackingapi-deployment
spec:
  selector:
    matchLabels:
      app: ruletrackingapi
  replicas: 1
  template:
    metadata:
      labels:
        app: ruletrackingapi
    spec:
      containers:
        - name: ruletrackingapi
          image: dockerhub.dttt.vn/core/ruletracking.api:5.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: v1
kind: Service
metadata:
  name: ruletracking-service
  labels:
    app: ruletrackingapi
spec:
  ports:
    - port: 80
  selector:
    app: ruletrackingapi
