kubernetes/basesvc/core/schedule.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduleapi-deployment
spec:
  selector:
    matchLabels:
      app: scheduleapi
  replicas: 1
  template:
    metadata:
      labels:
        app: scheduleapi
    spec:
      containers:
        - name: scheduleapi
          image: dockerhub.dttt.vn/core/schedule.api:5.1
          imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: v1
kind: Service
metadata:
  name: schedule-service
  labels:
    app: scheduleapi
spec:
  ports:
    - port: 80
  selector:
    app: scheduleapi
