kubernetes/basesvc/core/slog.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slogapi-deployment
spec:
  selector:
    matchLabels:
      app: slogapi
  replicas: 1
  template:
    metadata:
      labels:
        app: slogapi
    spec:
      containers:
        - name: slogapi
          image: dockerhub.dttt.vn/core/slog.api:5.1
          imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: v1
kind: Service
metadata:
  name: slog-service
  labels:
    app: slogapi
spec:
  ports:
    - port: 80
  selector:
    app: slogapi
