kubernetes/basesvc/core/tailieu.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailieuapi-deployment
spec:
  selector:
    matchLabels:
      app: tailieuapi
  replicas: 1
  template:
    metadata:
      labels:
        app: tailieuapi
    spec:
      containers:
        - name: tailieuapi
          image: dockerhub.dttt.vn/core/tailieu.api:5.1
          imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: v1
kind: Service
metadata:
  name: tailieu-service
  labels:
    app: tailieuapi
spec:
  ports:
    - port: 80
  selector:
    app: tailieuapi
