kubernetes/basesvc/core/template.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: templateapi-deployment
spec:
  selector:
    matchLabels:
      app: templateapi
  replicas: 1
  template:
    metadata:
      labels:
        app: templateapi
    spec:
      containers:
        - name: templateapi
          image: dockerhub.dttt.vn/core/template.api:5.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: v1
kind: Service
metadata:
  name: template-service
  labels:
    app: templateapi
spec:
  ports:
    - port: 80
  selector:
    app: templateapi
