kubernetes/basesvc/core/uniquenumber.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniquenumberapi-deployment
spec:
  selector:
    matchLabels:
      app: uniquenumberapi
  replicas: 1
  template:
    metadata:
      labels:
        app: uniquenumberapi
    spec:
      containers:
        - name: uniquenumberapi
          image: dockerhub.dttt.vn/core/uniquenumber.api:5.1
          imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: v1
kind: Service
metadata:
  name: uniquenumber-service
  labels:
    app: uniquenumberapi
spec:
  ports:
    - port: 80
  selector:
    app: uniquenumberapi
