kubernetes/basesvc/core/userorg.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userorgapi-deployment
spec:
  selector:
    matchLabels:
      app: userorgapi
  replicas: 1
  template:
    metadata:
      labels:
        app: userorgapi
    spec:
      containers:
        - name: userorgapi
          image: dockerhub.dttt.vn/core/userorg.api:5.1
          ports:
            - containerPort: 81
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: v1
kind: Service
metadata:
  name: userorg-service
  labels:
    app: userorgapi
spec:
  ports:
    - port: 81
  selector:
    app: userorgapi
