kubernetes/basesvc/core/workflow.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflowapi-deployment
spec:
  selector:
    matchLabels:
      app: workflowapi
  replicas: 1
  template:
    metadata:
      labels:
        app: workflowapi
    spec:
      containers:
        - name: workflowapi
          image: dockerhub.dttt.vn/core/workflow.api:5.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
      - name: dockerhubdtttvn

---
apiVersion: v1
kind: Service
metadata:
  name: workflowapi-service
  labels:
    app: workflowapi
spec:
  ports:
    - port: 80
  selector:
    app: workflowapi
